@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-11-23" />
+<meta name="date" content="2010-12-07" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-11-23</td></tr>
+<td>2010-12-07</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -263,7 +263,7 @@ of this program, and also in the chapter <a class="reference" href="#gnu-general
 <li><a class="reference" href="#generating-a-global-tags-file" id="id80" name="id80">Generating a global tags file</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#ignore-tags" id="id81" name="id81">Ignore tags</a></li>
+<li><a class="reference" href="#c-ignore-tags" id="id81" name="id81">C Ignore tags</a></li>
 </ul>
 </li>
 <li><a class="reference" href="#preferences" id="id82" name="id82">Preferences</a><ul>
@@ -2002,14 +2002,25 @@ upgrading Geany.</p>
 </div>
 </div>
 <div class="section">
-<h3><a class="toc-backref" href="#id81" id="ignore-tags" name="ignore-tags">Ignore tags</a></h3>
-<p>You can also ignore certain tags if they would lead to wrong parsing of
-the code. Simply create a file called &quot;ignore.tags&quot; in your Geany
-configuration directory (usually <tt class="docutils literal"><span class="pre">~/.config/geany/</span></tt>). Then list all tags
-you want to ignore in this file, separated by spaces and/or newlines.</p>
-<p>More detailed information about the usage from the Exuberant Ctags
-manual page:</p>
+<h3><a class="toc-backref" href="#id81" id="c-ignore-tags" name="c-ignore-tags">C Ignore tags</a></h3>
+<p>You can ignore certain tags for C-based languages if they would lead
+to wrong parsing of the code. Use the <em>Tools-&gt;Configuration
+Files-&gt;ignore.tags</em> menu item to open the user <tt class="docutils literal"><span class="pre">ignore.tags</span></tt> file.
+See also <a class="reference" href="#configuration-file-paths">Configuration file paths</a>.</p>
+<p>List all tag names you want to ignore in this file, separated by spaces
+and/or newlines.</p>
+<p>Example:</p>
 <pre class="literal-block">
+G_GNUC_NULL_TERMINATED
+G_GNUC_PRINTF
+G_GNUC_WARN_UNUSED_RESULT
+</pre>
+<p>This will parse code like:</p>
+<p><tt class="docutils literal"><span class="pre">gchar</span> <span class="pre">**utils_strv_new(const</span> <span class="pre">gchar</span> <span class="pre">*first,</span> <span class="pre">...)</span>
+<span class="pre">G_GNUC_NULL_TERMINATED;</span></tt></p>
+<p>More detailed information about ignore tags usage from the Exuberant Ctags
+manual page:</p>
+<blockquote>
 Specifies a list of identifiers which are to be specially handled
 while  parsing C and C++ source files. This option is specifically
 provided to handle special cases arising through the use of
@@ -2019,8 +2030,7 @@ If an identifier is suffixed with a '+' character, ctags will also
 ignore any parenthesis-enclosed argument list which may immediately
 follow the identifier in the source files.
 If two identifiers are separated with the '=' character, the first
-identifiers is replaced by the second identifiers for parsing purposes.
-</pre>
+identifiers is replaced by the second identifiers for parsing purposes.</blockquote>
 <p>For even more detailed information please read the manual page of
 Exuberant Ctags.</p>
 </div>
@@ -6383,7 +6393,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-12-07 17:39 UTC.
+Generated on: 2010-12-07 18:00 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
